# MovieMaker

./: .gitignore  Algorithm.h  CMakeLists.txt  Client.cpp  FileSaver.cpp  FileSaver.h  FlipHorizontally.cpp  FlipHorizontally.h  FlipVertically.cpp  FlipVertically.h  Frame.cpp  Frame.h  Identity.cpp  Identity.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Interpolation.cpp  Interpolation.h  InvertColors.cpp  InvertColors.h  Linear.cpp  Linear.h  Logarithmic.cpp  Logarithmic.h  Movie.cpp  Movie.h  NetworkUtilities.cpp  NetworkUtilities.h  ReduceColors.cpp  ReduceColors.h  Register.cpp  Register.h  ReplySaver.cpp  ReplySaver.h  Saver.cpp  Saver.h  Server.cpp  Tests.cpp  (+1 more)
libraries/Catch2/: catch.hpp
libraries/yami4-core/: yamicore-debug.lib  yamicore.lib
libraries/yami4-cpp/: yamicpp.lib
